[project]
name = "flowmap-inference-env"
version = "0.1.0"
description = "Dependencies for custom two-timestep FLUX flow-map inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "diffusers",
  "accelerate",
  "transformers<4.56",
  "peft",
  "huggingface_hub",
  "safetensors",
  "sentencepiece",
  "ftfy",
  "protobuf",
  "pillow",
  "numpy",
  "tqdm",
  "requests",
  "torch",
  "torchvision",
  "imageio>=2.37.2",
  "image-reward>=1.5",
  "openai-clip>=1.0.1",
  "clip>=0.2.0",
  "pytorch-lightning>=2.6.1",
  "hpsv2>=1.2.0",
  "memsave-torch",
  "matplotlib>=3.10.8",
  "trl>=0.22.2",
  "qwen-vl-utils>=0.0.14",
]

[tool.uv]
# This folder is used as an environment/dependency project, not a distributable package.
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
memsave-torch = { git = "https://github.com/lucaeyring/memsave_torch.git" }

[tool.uv.workspace]
members = [
    "UniGenBench/offline_eval_env",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
